# triton-viz

./: .gitignore  build.sh  pyproject.toml  run.sh  setup.py
examples/: dot.py  mat.py  matmul.py  matmul.ttgir  matmul_int.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/components/: BlockView.jsx  CodeViewerComponent.jsx  GridBlock.jsx  GridViewComponent.jsx  visualization-components.js
triton_viz/: __init__.py  data.py  draw.py  interface.py  interpreter.py  trace.py  utils.py
triton_viz/frontend_build/: asset-manifest.json  index.html
triton_viz/frontend_build/static/js/: main.69da2920.js  main.69da2920.js.LICENSE.txt
