[tool.ruff]
ignore = ["E731"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-viz"
version = "1.1.1"
description = "A visualization tool for Triton"
authors = [
  {name = "Deep Learning Profiling Tools Team", email = "kzhou6@gmu.edu"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "setuptools",
  "triton",
  "pyarrow",
  "pre-commit",
  "pytest",
  "flask",
  "flask-cors",
  "flask-cloudflared"
]

[project.urls]
homepage = "https://github.com/Deep-Learning-Profiling-Tools/triton-viz"
